Sticky navbar, fix pricing aligning issues, reduce form width, added social media icon to footer and more

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,9 @@ body {
 .navbar {
     background-color: #e8f4fd;
     font-family: 'Roboto', sans-serif;
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 
@@ -69,6 +72,8 @@ body {
    
     padding-bottom: 30px;
     font-family: 'Roboto', sans-serif;
+    
+    padding-top: 100px;
 }
 
 .header-first h1, .header-first p {
@@ -132,11 +137,15 @@ body {
    
 }
 
-.fas {
+.fas, .fab {
     color: #FC5C7D;
 }
 
 .fas:hover {
+   color: #6A82FB;
+}
+
+.fab:hover {
    color: #6A82FB;
 }
 
@@ -195,6 +204,11 @@ body {
     
 }
 
+.btn-price {
+    vertical-align: bottom; 
+    position: relative;
+    bottom: 0;
+}
 
 .btn-price {
    background-image: linear-gradient(to right, #6A82FB, #FC5C7D); 
@@ -213,21 +227,15 @@ body {
 }
 
 
-/* ----------------------------------------------------------------------------------------
-                                07. Action area css
- --------------------------------------------------------------------------------------- */
-
-
-
-/* ----------------------------------------------------------------------------------------
-                                08. Testimonial area css
-* --------------------------------------------------------------------------------------- */
-
-
 
 /* ----------------------------------------------------------------------------------------
                                  09. Contact area css
  --------------------------------------------------------------------------------------- */
+.contact-frm {
+    width: 60%;
+    margin: auto;
+
+}
 
 .contact-section {
     background: #FC5C7D;  /* fallback for old browsers */
@@ -252,6 +260,8 @@ body {
 [type="text"] {
     margin-bottom: 8px;
 }
+
+
 
 .btn-submit {
    background-color: #fff; 
@@ -293,10 +303,6 @@ footer {
     font-size: 15px;
 }
 
-.footer-1 img {
-    padding-top: 1em;
-    width: 20%;
-}
 
 .btn-footer {
    background-image: linear-gradient(to right, #6A82FB, #FC5C7D); 
@@ -321,6 +327,9 @@ footer {
     color: #fff;
 }
 
+.social-icons {
+    padding-top: 10px;
+}
 
 /* ----------------------------------------------------------------------------------------
                                  Media Queries
